catkin_ws/logs/px4_offboard/build.make.033.log
[  0%] Built target actionlib_generate_messages_cpp
[  0%] Built target _catkin_empty_exported_target
[  0%] Built target actionlib_msgs_generate_messages_cpp
[  0%] Built target diagnostic_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target _px4_offboard_generate_messages_check_deps_JoyCommand
[  0%] Built target diagnostic_msgs_generate_messages_lisp
[  0%] Built target diagnostic_msgs_generate_messages_py
[  0%] Built target nav_msgs_generate_messages_cpp
[  0%] Built target actionlib_generate_messages_py
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target mavros_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_lisp
[  0%] Built target actionlib_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_py
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target nav_msgs_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target nav_msgs_generate_messages_py
[  0%] Built target sensor_msgs_generate_messages_cpp
[  0%] Built target mavros_msgs_generate_messages_cpp
[  0%] Built target sensor_msgs_generate_messages_lisp
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_cpp
[  0%] Built target tf2_msgs_generate_messages_py
[ 16%] Built target px4_offboard_generate_messages_py
[ 16%] Built target mavros_msgs_generate_messages_lisp
[35m[1mScanning dependencies of target teleop[0m
[ 25%] Built target px4_offboard_generate_messages_cpp
[ 33%] Built target px4_offboard_generate_messages_lisp
[35m[1mScanning dependencies of target SLAM[0m
[35m[1mScanning dependencies of target apriltag[0m
[ 41%] [32mBuilding CXX object CMakeFiles/apriltag.dir/src/apriltag.cpp.o[0m
[ 50%] [32mBuilding CXX object CMakeFiles/teleop.dir/src/teleop.cpp.o[0m
[ 58%] [32mBuilding CXX object CMakeFiles/SLAM.dir/src/SLAM.cpp.o[0m
[ 75%] Built target checker
[ 75%] Built target px4_offboard_generate_messages
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/teleop.cpp:2:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/include/px4_offboard/CtrlPx4.h:36:56: error: expected ‘;’ at end of member declaration
   void aprilCallback(const px4_offboard::JoyCommand joy)
                                                        ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/CtrlPx4.cpp:1:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/SLAM.cpp:2:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/include/px4_offboard/CtrlPx4.h:36:56: error: expected ‘;’ at end of member declaration
   void aprilCallback(const px4_offboard::JoyCommand joy)
                                                        ^
make[2]: *** [CMakeFiles/teleop.dir/src/teleop.cpp.o] Error 1
make[1]: *** [CMakeFiles/teleop.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 83%] [32m[1mLinking CXX executable /home/tuofeichen/SLAM/MAV-Project/catkin_ws/devel/lib/px4_offboard/apriltag[0m
[ 83%] Built target apriltag
make[2]: *** [CMakeFiles/SLAM.dir/src/SLAM.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
